--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página Inicial</h1>
-    <a href="vendas.html">Ir para Vendas</a>
+    <h1>Sobre Nós</h1>
+    <a href="index.html">Voltar</a>
 </body>
 </html>
